2007-03-15  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/lxm3200-tweaked.xml: Fixed "<nmae>" field (Thanks to
	  Poprocks for his report on the forum).

2007-02-27  John Hosszu <john.hosszu@hp.com>

	* resync
	* printer/: Added
          HP-OfficeJet_J5700.xml
          HP-OfficeJet_Pro_K5300.xml
          HP-OfficeJet_Pro_K5400.xml
          HP-OfficeJet_Pro_L7300.xml
          HP-OfficeJet_Pro_L7500.xml
          HP-OfficeJet_Pro_L7600.xml
          HP-OfficeJet_Pro_L7700.xml


2007-02-27  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/rastertokmXXXXdl.xml: Filled new driver information
	  fields.

	* printer/KonicaMinolta-magicolor_2300_DL.xml,
	  printer/KonicaMinolta-magicolor_2430_DL.xml,
	  printer/KonicaMinolta-magicolor_2490_MF.xml,
	  printer/KonicaMinolta-magicolor_2530_DL.xml,
	  printer/KonicaMinolta-magicolor_5430_DL.xml,
	  printer/KonicaMinolta-magicolor_5440_DL.xml,
	  printer/KONICA_MINOLTA-magicolor_2300_DL.xml,
	  printer/KONICA_MINOLTA-magicolor_2430_DL.xml,
	  printer/KONICA_MINOLTA-magicolor_2490_MF.xml,
	  printer/KONICA_MINOLTA-magicolor_2530_DL.xml,
	  printer/KONICA_MINOLTA-magicolor_5430_DL.xml,
	  printer/KONICA_MINOLTA-magicolor_5440_DL.xml,
	  driver/foo2lava.xml, driver/foo2zjs.xml,
	  driver/rastertokmXXXXdl.xml, db/oldprinterids: Changed
	  manufacturer name "KonicaMinolta" to "KONICA MINOLTA".

2007-02-22  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/ljet4.xml, driver/splix.xml: First driver entries
	  with extended property information (for testing).

2007-02-08  Till Kamppeter <till.kamppeter@gmail.com>

	* debian/linuxprinting.org-ppds.dirs,
	  debian/openprinting-ppds.dirs, debian/README.Debian,
	  debian/control, debian/rules, debian/watch: Replaced "FSG
	  OpenPrinting" and "linuxprinting.org" by "OpenPrinting" in the
	  debian/ subdirectory.

2007-02-06  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/epsonepl.xml, driver/gimp-print.xml, driver/gutenprint.xml,