@@ -183,6 +183,9 @@
       <id>printer/Brother-HL-7050N</id>
     </printer>
     <printer>
+      <id>printer/Brother-DCP-8045D</id>
+    </printer>
+    <printer>
       <id>printer/Canon-GP_335</id>
       <!-- Canon GP 335 -->
       <comments>
