@@ -1,6 +1,33 @@
 <driver id="driver/gutenprint">
  <name>gutenprint</name>
  <url>http://gimp-print.sourceforge.net/</url>
+ <supplier>Gutenprint project</supplier>
+ <thirdpartysupplied />
+ <!--not "manufacturersupplied"-->
+ <license>GPL</license>
+ <freesoftware />
+ <!--not "nonfreesoftware"-->
+ <supportcontacts>
+  <supportcontact level="voluntary" url="https://lists.sourceforge.net/lists/listinfo/gimp-print-devel">Gutenprint mailing list at SourceForge</supportcontact>
+  <!--not level="commercial"-->
+ </supportcontacts>
+ <shortdescription>
+  <en>
+   Top Quality Printer Drivers for inkjets, dye sublimation printers, and PCL lasers
+  </en>
+ </shortdescription>
+ <functionality>
+  <maxresx></maxresx>
+  <maxresy></maxresy>
+  <color />
+  <!--not "monochrome"-->
+  <text>90</text>
+  <lineart>90</lineart>
+  <graphics>100</graphics>
+  <photo>100</photo>
+  <load></load>
+  <speed>60</speed>
+ </functionality>
  <execution>
   <cups />
   <prototype></prototype>
