@@ -107,6 +107,9 @@
    <id>printer/Brother-HL-7050N</id>
   </printer>
   <printer>
+   <id>printer/Brother-DCP-8045D</id>
+  </printer>
+  <printer>
    <id>printer/Canon-LBP-1000</id><!-- Canon LBP-1000 -->
   </printer>
   <printer>
