@@ -218,6 +218,9 @@
    <id>printer/Brother-HL-5170DN</id>
   </printer>
   <printer>
+   <id>printer/Brother-DCP-8045D</id>
+  </printer>
+  <printer>
    <id>printer/Canon-GP_335</id><!-- Canon GP 335 -->
    <comments>
     <en>PCL printing also supported.</en>
