@@ -1,0 +1,58 @@
+<printer id="printer/Brother-DCP-8045D">
+  <make>Brother</make>
+  <model>DCP-8045D</model>
+  <mechanism>
+    <laser/><!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>2400</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <margins>
+      <general>
+         <unit>pt</unit>
+         <top>12</top>
+         <bottom>12</bottom>
+         <left>12</left>
+         <right>12</right>
+      </general>
+    </margins>
+    <consumables>
+      <comments>
+        <en>Separate Toner and Drum</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://www.brother.com/usa/printer/info/hl7050/hl7050_ove.html</url>
+  <lang>
+    <postscript level="3" />
+    <pcl level="6"/>
+    <proprietary />
+    <pjl/>
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  </autodetect>
+  <functionality>A</functionality>
+  
+  <driver>Postscript</driver>
+  <drivers>
+    <driver>
+      <id>Postscript</id>
+      <ppd>PPD/Brother/BR8045_2_GPL.ppd</ppd>
+    </driver>
+  </drivers>
+  <!--verified-->
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    Understands PCL5e, PCL 6, PostScript Level 3 and also the proprietary
+    language of the cheaper models.
+
+    </en>
+  </comments>
+</printer>
