@@ -1,3 +1,14 @@
+2007-03-30  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/gutenprint.xml, driver/hl7x0.xml: Added extra info
+	  about the drivers.
+
+	* printer/Brother-DCP-8045D.xml, driver/Postscript.xml,
+	  driver/hl7x0.xml, driver/ljet4.xml, driver/pxlmono.xml,
+	  driver/lj5gray.xml, driver/lj5mono.xml: Added the Brother
+	  DCP-8045D (thanks to Tim Fechtner, urwald at gmx-topmail
+	  dot de).
+	  
 2007-03-15  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* driver/lxm3200-tweaked.xml: Fixed "<nmae>" field (Thanks to
